--- a/package.json
+++ b/package.json
@@ -26,6 +26,10 @@
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
   },
+  "engines": {
+    "node": "12.13.1",
+    "npm": "6.12.1"
+  },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.13.0",
     "@angular/cli": "~7.3.8",
