--- a/package.json
+++ b/package.json
@@ -24,12 +24,13 @@
     "@angular/router": "~7.2.0",
     "core-js": "^2.5.4",
     "express": "^4.17.1",
+    "ngx-device-detector": "^1.3.20",
     "node-mandrill": "^1.0.1",
     "path": "^0.12.7",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
-    },
+  },
   "engines": {
     "node": "12.13.1",
     "npm": "6.12.1"
